--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -1,3 +1,15 @@
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+
+footer {
+  width: 100%;
+  height: 250px;
+  background-color: rgb(241, 241, 241);
+}
+
 /*index main*/
 section {
   height: 100vh;
@@ -11,14 +23,14 @@ section {
   background-attachment: fixed;
 }
 
-.fondo2 {
+.fondoDos {
   background: url(../assets/img-empresa-argentina.jpg);
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
 }
 
-.fondo3 {
+.fondoTres {
   background: url(../assets/img-urquiza.jpg);
   background-size: cover;
   background-position: center center;
@@ -41,6 +53,11 @@ h2 {
   color: aliceblue;
 }
 
+h2:hover {
+  color: rgb(253, 253, 253);
+  text-shadow: 0 0 10px white, 0 0 20px white, 0 0 40px red, 0 0 80px white, 0 0 120px white;
+}
+
 .div__blur {
   height: 100%;
   width: 100%;
@@ -48,16 +65,8 @@ h2 {
           backdrop-filter: blur(10px);
 }
 
-footer {
-  width: 100%;
-  height: 250px;
-  background-color: rgb(241, 241, 241);
-}
-
-* {
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
+.logo_nav {
+  max-width: 100%;
 }
 
 body {
