--- a/estilos/estilo.scss
+++ b/estilos/estilo.scss
@@ -1,11 +1,13 @@
-@import "./main";
-@import "./footer";
 
 * {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
 }
+@import "./footer";
+@import "./main";
+@import "./header";
+
 
 body {
     display: grid;
