agrege iconos y animaciones cnd

--- a/estilos/_main.scss
+++ b/estilos/_main.scss
@@ -62,3 +62,11 @@ h2:hover {
     width: 100%;
     backdrop-filter: blur(10px);
 }
+
+.div__separador--p {
+
+    
+    font-size: 100px ;
+    text-align: center ;
+    
+}
