--- a/estilos/_mediaqueris.scss
+++ b/estilos/_mediaqueris.scss
@@ -13,4 +13,23 @@ h2 {
     font-size: 10vw;
 }
 
+
+.div__separador--p {
+   
+    font-size: 16vw;
+    text-align: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 }
