--- a/estilos/_mediaqueris.scss
+++ b/estilos/_mediaqueris.scss
@@ -2,34 +2,28 @@
 
 @media screen and (max-width : 780px) {
 
-.fondoUno {
-    width: 100vw;
+    .fondoUno {
+        width: 100vw;
         display: flex;
         flex-wrap: wrap;
-}        
-    
-
-h2 {
-    font-size: 10vw;
-}
+    }
 
 
-.div__separador--p {
-   
-    font-size: 16vw;
-    text-align: center;
-}
+    h2 {
+        font-size: 10vw;
+    }
 
 
+    .div__separador--p {
+
+        font-size: 16vw;
+        text-align: center;
+    }
 
 
+    .carruselIndex {
+        display: grid;
+        grid-template-columns: 1fr } 
 
 
-
-
-
-
-
-
-
-}
+    }
