--- a/estilos/_header.scss
+++ b/estilos/_header.scss
@@ -1,3 +1,10 @@
+@import "./configuracion";
+
 .logo_nav {
     max-width: 100%;
 } 
+
+.nav__color {
+    background-color: map-get($coloresNav , colorNav );
+    
+}
