--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -11,8 +11,10 @@ footer {
 }
 
 /*Colores*/
+/*ColorNav*/
 /*titulosIndes*/
 /*BordesIndex*/
+/*fuente*/
 /*index main*/
 section {
   height: 100vh;
@@ -96,12 +98,28 @@ h2:hover {
 .carruselIndex {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  height: 50%;
+  height: 100%;
   width: 100%;
 }
 
+.section__tres {
+  height: 50vh;
+  width: 100%;
+  background-color: azure;
+  text-align: center;
+}
+
+/*Colores*/
+/*ColorNav*/
+/*titulosIndes*/
+/*BordesIndex*/
+/*fuente*/
 .logo_nav {
   max-width: 100%;
+}
+
+.nav__color {
+  background-color: rgba(255, 0, 0, 0.199);
 }
 
 body {
