--- a/estilos/_configuracion.scss
+++ b/estilos/_configuracion.scss
@@ -7,7 +7,7 @@ $colores : (
     amarillo : yellow,
     blanco : white,
     negro : black,
-    
+    macro:  #0e1525,
     );
 
 
@@ -45,3 +45,12 @@ $bordeUrquiza : 8px outset rgb(0, 0, 255);
 /*fuente*/
 
 $fuente : 'Press Start 2P', cursive;
+$fuente2 : 'Monda', sans-serif;
+
+$fuente3 : 'Paytone One', sans-serif;  ;
+
+/*Separador*/
+
+$colorSeparador :  #0e1525 ;
+
+
