--- a/estilos/_configuracion.scss
+++ b/estilos/_configuracion.scss
@@ -20,7 +20,8 @@ $coloresNav : (colorNav : rgba(255, 0, 0, 0.199),
 
 /*titulosIndes*/
 
-$coloresTitulos : (chevallier : white,
+$coloresTitulos : (
+    chevallier : white,
     empArg : yellow,
     urquiza : blue,
 
@@ -34,7 +35,7 @@ $bordeChevallier :8px outset red;
 
 $bordeEmpresaArgentina: 8px outset yellow;
 
-$bordeUrquiza : 8px outset rgb(0, 0, 255);
+$bordeUrquiza : 8px outset rgba(0, 0, 255, 0.966);
 
 /*fuente*/
 
@@ -49,3 +50,7 @@ sans-serif;
 /*Separador*/
 
 $colorSeparador : #0e1525;
+
+/*Color Foooter*/
+
+$fondoFooter: #0e1525;
