--- a/estilos/_footer.scss
+++ b/estilos/_footer.scss
@@ -1,5 +1,32 @@
+@import "./configuracion";
+
 footer {
-    width: 100%;
-    height: 250px;
-    background-color: rgb(241, 241, 241);
+padding-bottom: 30px;
+    background-color: $fondoFooter;
+    color:map-get($colores, blanco );
+}
+
+@mixin dgrid($column, $row, $gap) {
+    display: grid;
+    grid-template-columns: $column;
+    grid-template-rows: $row;
+    gap: $gap;
+}
+
+
+.footer {
+    @include dgrid(1fr 1fr, auto, 20px);
+
+}
+
+.iconos__footer {
+    font-size: 80px;
+}
+
+footer div div {
+    text-align: center;
+}
+
+h5 {
+    font-size: 50px;
 }
