--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -4,10 +4,36 @@
   box-sizing: border-box;
 }
 
+/*Colores*/
+/*ColorNav*/
+/*titulosIndes*/
+/*BordesIndex*/
+/*fuente*/
+/*Separador*/
+/*Color Foooter*/
 footer {
-  width: 100%;
-  height: 250px;
-  background-color: rgb(241, 241, 241);
+  padding-bottom: 30px;
+  background-color: #0e1525;
+  color: white;
+}
+
+.footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto;
+  gap: 20px;
+}
+
+.iconos__footer {
+  font-size: 80px;
+}
+
+footer div div {
+  text-align: center;
+}
+
+h5 {
+  font-size: 50px;
 }
 
 /*Colores*/
@@ -16,6 +42,7 @@ footer {
 /*BordesIndex*/
 /*fuente*/
 /*Separador*/
+/*Color Foooter*/
 /*index main*/
 section {
   height: 100vh;
@@ -44,7 +71,7 @@ section {
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
-  border: 8px outset rgb(0, 0, 255);
+  border: 8px outset rgba(0, 0, 255, 0.966);
 }
 
 .div__separador {
@@ -65,7 +92,6 @@ section {
       -ms-hyphens: auto;
           hyphens: auto;
   text-align: center;
-  /*line-height: 100vh;*/
   font-size: 9vw;
   color: white;
   font-family: "Monda", sans-serif;
@@ -128,6 +154,7 @@ h2:hover {
 /*BordesIndex*/
 /*fuente*/
 /*Separador*/
+/*Color Foooter*/
 .logo_nav {
   max-width: 100%;
 }
