--- a/estilos/_main.scss
+++ b/estilos/_main.scss
@@ -143,3 +143,14 @@ h2:hover {
 .pagoimg {
     width: 50vw;
 }
+
+.destinos figure img {
+	-webkit-filter: blur(3px);
+	filter: blur(3px);
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+}
+.destinos figure:hover img {
+	-webkit-filter: blur(0);
+	filter: blur(0);
+}
