--- a/estilos/_mediaqueris.scss
+++ b/estilos/_mediaqueris.scss
@@ -26,4 +26,11 @@
         grid-template-columns: 1fr } 
 
 
+        
+        .footer{
+            
+            grid-template-columns: 1fr;
+            
+        }
+        
     }
