--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -13,7 +13,7 @@
 /*Color Foooter*/
 footer {
   padding-bottom: 30px;
-  background-color: #0e1525;
+  background-color: #080b13;
   color: white;
 }
 
