section hero index 1.08

--- a/estilos/_configuracion.scss
+++ b/estilos/_configuracion.scss
@@ -9,9 +9,16 @@ $colores : (rojo : red,
 
 
 
+/*Section Hero*/
+
+$tituloHero : white;
+$parrafoHero : white;
+$iconosHero : 5vw ;
+
+
 /*ColorNav*/
 
-$coloresNav : (colorNav : rgba(255, 0, 0, 0.199),
+$coloresNav : (colorNav : rgb(36, 40, 85),
 
 
 );
