--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -164,6 +164,7 @@ h2:hover {
   background: url(../assets/fondoHero.jpg);
   background-size: cover;
   background-position: center center;
+  background-attachment: fixed;
 }
 
 .section__titulo {
