section tres arreglada parece

--- a/estilos/_configuracion.scss
+++ b/estilos/_configuracion.scss
@@ -29,8 +29,8 @@ $coloresNav : (colorNav : rgb(36, 40, 85),
 
 $coloresTitulos : (
     chevallier : white,
-    empArg : yellow,
-    urquiza : blue,
+    empArg : rgb(255, 255, 255),
+    urquiza : rgb(255, 255, 255),
 
 );
 
