--- a/estilos/_mediaqueris.scss
+++ b/estilos/_mediaqueris.scss
@@ -34,5 +34,21 @@
         }
         
 
+        .section__hero {
+            /*  background-color: map-get($colores, macro ); */
+            height: 30vh;
+            width: 100%;
+            background: url(../assets/fondoHero.jpg);
+            background-size: cover;
+            background-position: bottom;
+        
+        
+        }
+
+        .section__tres {
+            height: fit-content;
+        }
+        
+
 
     }
