--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   margin: 0px;
   padding: 0px;
@@ -100,11 +101,11 @@ section {
 }
 
 .h2__empArg {
-  color: yellow;
+  color: rgb(255, 255, 255);
 }
 
 .h2__urquiza {
-  color: blue;
+  color: rgb(255, 255, 255);
 }
 
 h2:hover {
@@ -136,9 +137,14 @@ h2:hover {
   width: 100%;
 }
 
+.carrusel__Tamaño {
+  width: 100%;
+  height: 100%;
+}
+
 .section__tres {
   color: white;
-  height: 50vh;
+  height: 300px;
   width: 100%;
   background-color: #0e1525;
   text-align: center;
@@ -246,5 +252,20 @@ footer {
 
   .footer {
     grid-template-columns: 1fr;
+  }
+
+  .section__hero {
+    /*  background-color: map-get($colores, macro ); */
+    height: 30vh;
+    width: 100%;
+    background: url(../assets/fondoHero.jpg);
+    background-size: cover;
+    background-position: bottom;
+  }
+
+  .section__tres {
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
   }
 }/*# sourceMappingURL=estilo.css.map */
