--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -86,7 +86,7 @@ section {
   filter: drop-shadow(0 0 15px black);
   background-color: #0e1525;
   color: white;
-  font-family: "Press Start 2P", cursive;
+  font-family: "Paytone One", sans-serif;
 }
 
 .h2__chevallier, .h2__urquiza, .h2__empArg {
@@ -144,11 +144,13 @@ h2:hover {
 
 .section__tres {
   color: white;
-  height: 300px;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
   width: 100%;
   background-color: #0e1525;
   text-align: center;
-  font-family: "Press Start 2P", cursive;
+  font-family: "Paytone One", sans-serif;
 }
 
 .pagoimg {
@@ -178,6 +180,7 @@ h2:hover {
   margin-top: 11vh;
   font-size: 10vw;
   color: white;
+  text-shadow: 0 0 10px white, 0 0 20px white, 0 0 40px rgb(225, 0, 255), 0 0 80px white, 0 0 120px white;
 }
 
 .section__hero p {
@@ -187,6 +190,7 @@ h2:hover {
 
 .section__hero--iconos {
   font-size: 5vw;
+  text-shadow: 0 0 10px white, 0 0 20px white, 0 0 40px rgb(225, 0, 255), 0 0 80px white, 0 0 120px white;
 }
 
 /*Colores*/
