section tres efecto neon a todo 1.13

--- a/estilos/_configuracion.scss
+++ b/estilos/_configuracion.scss
@@ -16,6 +16,16 @@ $parrafoHero : white;
 $iconosHero : 5vw ;
 
 
+/*tamaño de fuentes*/
+
+$tamañoFuentes : (
+hero-titulo : 10vw,
+hero-parrafo : 3rem,
+
+
+);
+
+
 /*ColorNav*/
 
 $coloresNav : (colorNav : rgb(36, 40, 85),
@@ -61,3 +71,6 @@ $colorSeparador : #0e1525;
 /*Color Foooter*/
 
 $fondoFooter: #080b13;
+
+
+
