--- a/estilos/_main.scss
+++ b/estilos/_main.scss
@@ -27,6 +27,7 @@ section {
     background-position: center center;
     background-attachment: fixed;
     /*  border: $bordeChevallier; */
+    
 
 }
 
@@ -194,6 +195,10 @@ h2:hover {
     font-size: $iconosHero;
     @include efectoNeon(rgb(225, 0, 255))
 }
+
+/*Fin del index*/
+
+/*Chevallier*/
 
 
 
