--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -201,17 +201,10 @@ h2:hover {
 /*Fin del index*/
 /*Chevallier*/
 .section__chevallier {
-  background: url(../assets/img-chevallier.jpg);
-  background-repeat: no-repeat;
-  background-position: center center;
+  background: url(../assets/img-chevallier.jpg) no-repeat fixed center center #333;
   background-size: cover;
   overflow: hidden;
   margin-top: 20px;
-  background-color: rgb(255, 0, 0);
-}
-
-.section__chevallier::after {
-  background-color: red;
 }
 
 .section__chevallier--titulo {
@@ -219,6 +212,14 @@ h2:hover {
   text-align: center;
   font-family: "Monda", sans-serif;
   font-size: 10vw;
+  color: white;
+  text-shadow: 0 0 10px white, 0 0 20px white, 0 0 40px red, 0 0 80px white, 0 0 120px white;
+}
+
+.section__chevallier p {
+  font-family: "Monda", sans-serif;
+  color: white;
+  font-size: 1rem;
 }
 
 /*Colores*/
